<resources>
    <string name="app_name">cardsPlayed</string>
    <string name="ace">A</string>
    <string name="king">K</string>
    <string name="queen">Q</string>
    <string name="jack">J</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>

    <string name="HeartSign">Heart Sign</string>
    <string name="SpadeSign">Spade Sign</string>
    <string name="ClubSign">Club Sign</string>
    <string name="DiamondSign">Diamond Sign</string>

    <string name="undo">UNDO</string>
    <string name="reset">RESET</string>
</resources>