<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageSpade"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/SpadeSign"
        app:srcCompat="@drawable/spade" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageSpade"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <Button
                android:id="@+id/sAce"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ace" />
            <Button
                android:id="@+id/sKing"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/king" />

            <Button
                android:id="@+id/sQueen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/queen" />

            <Button
                android:id="@+id/sJack"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/jack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/sTen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <Button
                android:id="@+id/sNine"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/sEight"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/sSeven"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/sSix"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:id="@+id/sFive"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/sFour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/sThree"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/sTwo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/two" />

        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/imageSpade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="200dp"
        tools:layout_editor_absoluteY="150dp" />

    <ImageView
        android:id="@+id/imageClub"
        android:layout_width="67dp"
        android:layout_height="144dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/ClubSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSpade"
        app:srcCompat="@drawable/club" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageClub"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <Button
                android:id="@+id/cAce"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ace" />
            <Button
                android:id="@+id/cKing"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/king" />

            <Button
                android:id="@+id/cQueen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/queen" />

            <Button
                android:id="@+id/cJack"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/jack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/cTen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <Button
                android:id="@+id/cNine"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/cEight"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/cSeven"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/cSix"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:id="@+id/cFive"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/cFour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/cThree"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/cTwo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/two" />

        </TableRow>

    </TableLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/imageClub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <ImageView
        android:id="@+id/imageHeart"
        android:layout_width="65dp"
        android:layout_height="136dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/imageClub"
        android:contentDescription="@string/HeartSign"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/heart" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageHeart"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <Button
                android:id="@+id/hAce"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ace" />
            <Button
                android:id="@+id/hKing"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/king" />

            <Button
                android:id="@+id/hQueen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/queen" />

            <Button
                android:id="@+id/hJack"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/jack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/hTen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <Button
                android:id="@+id/hNine"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/hEight"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/hSeven"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/hSix"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:id="@+id/hFive"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/hFour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/hThree"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/hTwo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/two" />

        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/imageHeart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="200dp"
        tools:layout_editor_absoluteY="150dp" />

    <ImageView
        android:id="@+id/imageDiamond"
        android:layout_width="67dp"
        android:layout_height="144dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/DiamondSign"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/diamond" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageDiamond"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <Button
                android:id="@+id/dAce"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ace" />
            <Button
                android:id="@+id/dKing"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/king" />

            <Button
                android:id="@+id/dQueen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/queen" />

            <Button
                android:id="@+id/dJack"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/jack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/dTen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <Button
                android:id="@+id/dNine"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/dEight"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/dSeven"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/dSix"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:id="@+id/dFive"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/dFour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/dThree"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/dTwo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/two" />

        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDiamond"
        tools:layout_editor_absoluteX="0dp" />





    <Button
        android:id="@+id/buttonUndo"
        android:layout_width="92dp"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:text="@string/undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
